syntax = "proto2";

package Raft;

message RaftMetadata {
    required uint64 current_term = 1;
    required uint64 voted_for = 2;
}

message LogMetadata {
    required uint64 version = 1;
    required RaftMetadata raft_metadata = 2;
    required uint64 entries_start = 3; // inclusive
    required uint64 entries_end = 4;   // inclusive
}